--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,6 +3,7 @@ log4j.rootLogger=Debug,console,file
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.Threshold = Debug
 log4j.appender.console.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 log4j.appender.file = org.apache.log4j.DailyRollingFileAppender
